@@ -1,5 +1,7 @@
 version 1.0.8 (not yet released)
 --------------------------------
+* allow shapefile to be optional, so a system version can be used
+  in stead of the bundled version
 * add 'textcolor' kwarg to drawmeridians and drawparallels (issue 145).
 * don't assume grid is regular when adding cyclic point in addcyclic. 
   New kwargs 'axis' and 'cyclic' added.  More than one array
